@@ -1,2 +1,17 @@
 # PaladinFX
 A JavaFX, Kotlin GUI for Discord Bots
+
+#### Gradle Version
+4.10.3
+![Gradle Version](https://media.discordapp.net/attachments/574702492399435962/574702564910825482/unknown.png)
+
+### IntelliJ Settings
+![Options](https://cdn.discordapp.com/attachments/574702492399435962/574712685980155915/unknown.png)
+#### Resources
+[JavaFX Settings and Docs](https://openjfx.io/openjfx-docs/)
+
+#### VM Options: 
+`--module-path "E:\Programme\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml`
+
+#### Program Arguments
+`--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED`
